--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "SET NODE_ENV=mss && node app.js"
+    // "start": "SET NODE_ENV=mss && node app.js"
+    "start": "NODE_ENV=mss node app.js"
   },
   "keywords": [],
   "author": "",
